@@ -7,6 +7,8 @@ struct T
   ~T() noexcept(false) { }
 };
 
+T t;
+
 struct A
 {
   A() noexcept;
@@ -24,6 +26,8 @@ struct U
   ~U() noexcept(false) { }
 };
 
+U u;
+
 struct B
 {
   B() noexcept(false);
@@ -35,16 +39,22 @@ struct B
 B::B() noexcept(false) = default;
 B::~B() noexcept(false) = default;
 
+B b;
+
 struct V
 {
   V() noexcept(false) { }
   ~V() noexcept(false) { }
 };
 
+V v;
+
 struct C
 {
-  C() noexcept = default;     // { dg-error "defaulted" }
-  ~C() noexcept = default;    // { dg-error "defaulted" }
+  C() noexcept = default;	// { dg-message "exception-specification" }
+  ~C() noexcept = default;	// { dg-message "exception-specification" }
 
   V v;
 };
+
+C c;				// { dg-error "deleted" }
